# castkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-readiness.yml
docs/: OVERVIEW.md  PUBLISHING.md
docs/plans/: 2026-03-04-agent-native-handoff-design.md  2026-03-04-agent-native-mvp-implementation-plan.md  2026-03-04-final-polish-open-source-design.md  2026-03-04-final-polish-open-source-implementation-plan.md  2026-03-04-optimization-roadmap.md  2026-03-04-screenstudio-agent-native-rebuild-implementation-plan.md  2026-03-05-overlays-web-mode-design.md  2026-03-05-overlays-web-mode-implementation-plan.md
examples/: branding-bold.json  branding-clean.json  branding-minimal.json  castkit-self-demo.json  deewiki-polished-script-v2.json  deewiki-scaffold-script.json  demo-script.template.json  demo-script.terminal-overlay.json  demo-script.web.json  final-polish-showcase.json  scaffold-echo.json
renderer/: package-lock.json  package.json  render.mjs
renderer-runtime/: package-lock.json  package.json  render-web.mjs  render.mjs  web-runner.mjs
scripts/: release-ready.sh
src/: agent_contract.rs  branding.rs  cli.rs  lib.rs  main.rs  schema.rs
src/execute/: artifacts.rs  mod.rs  redact.rs  runner.rs  transcript.rs  web_runner.rs
tests/: agent_cli_tests.rs  execute_artifacts_tests.rs  execute_tests.rs  execute_web_tests.rs  handoff_integration.rs  plan_scaffold_tests.rs  render_web_tests.rs  validate_tests.rs
(+12 files in other folders)
